--- a/static/css/src/frontend/style.css
+++ b/static/css/src/frontend/style.css
@@ -410,9 +410,23 @@ img{
 	margin-bottom: 20px;
 }
 	.post-img-list a{
+		position: relative;
 		display: block;
 		color:#333;
 	}
+		/*.post-img-list a:hover:before{
+			position: absolute;
+			content: attr(title);
+			width: 100%;
+			left: 0;
+			bottom: 100%;
+			background: rgba(0,0,0,.3);
+			border-radius: 2px;
+			color: #fff;
+			padding: 2px 5px;
+			line-height: 1.3;
+			font-size: 10px;
+		}*/
 		.post-img-list a:hover{
 			color: #D9534F;
 		}
@@ -711,12 +725,7 @@ label.error{
 
 	#comment-form-comment{
 		resize: vertical;
-		min-height: 80px;
-	}
-	#commentform .submit{
-	}
-	#commentform label{
-		font-weight: normal;
+		min-height: 50px;
 	}
 /**
  * #comment-pagination-container
@@ -1663,11 +1672,23 @@ label.error{
 	position: fixed;
 	bottom: 0;
 	right: 5px;
-	opacity: .3;
+	opacity: .5;
 	text-shadow: 0 1px 3px rgba(0,0,0,.3);
 	z-index: 1;
 	color: #fff !important;
 }
+	.back-to-top:hover:after{
+		position: absolute;
+		bottom: 100%;
+		left: 0;
+		width: 100%;
+		text-align: center;
+		background: rgba(0,0,0,.3);
+		color: #fff;
+		line-height: 1.5;
+		border-radius: 2px;
+		content: attr(title);
+	}
 	.back-to-top:hover{
 		opacity: 1;
 	}
