--- a/includes/custom-pm/static/css/src/style.css
+++ b/includes/custom-pm/static/css/src/style.css
@@ -1,36 +1,80 @@
-.pm-tab a{
-	display: block;
-	/*margin-bottom: 10px;*/
+.pm-tab{
+	background: #2196F3;
+	text-shadow: 0 1px 1px rgba(0,0,0,.5);
+	border-radius: 2px;
+	margin-bottom: 20px;
+	overflow: hidden;
 }
-@media( min-width: 768px ){
-	.pm-tab li{
-		width: 100%;
+	.pm-tab a{
+		position: relative;
+		color: #fff;
+		opacity: .8;
+		padding: 5px 10px;
+		float: left;
 	}
+	.pm-tab a:hover,
+	.pm-tab a.active{
+		opacity: 1;
+		background: rgba(255,255,255,.2);
+	}
+	.pm-tab .close{
+		display: none;
+		position: absolute;
+		top: 8px;
+		right: 8px;
+		width: 20px;
+		height: 20px;
+		font-size: 20px;
+		line-height: 17px;
+		text-align: center;
+		border-radius: 50%;
+		background: rgba(0,0,0,.8);
+		color: #fff;
+		font-weight: bold;
+	}
+		.pm-tab a:hover .close{
+			display: block;
+		}
+@media( min-width: 768px ){
+	.pm-tab a{
+		display: block;
+		float: none;
+		overflow: hidden;
+		white-space: nowrap;
+		text-overflow: ellipsis;
+	}
+	
+
 }
 .pm-dialog-list{
 	border-bottom: 2px dashed #eee;
-	padding-bottom: 20px;
+	margin-bottom: 10px;
+	overflow-y: auto;
+	max-height: 25em;
 }
-.pm-dialog-list .media-heading{
-	font-size: 12px;
-}
-	.pm-dialog-list .media-heading span{
-		margin-right: 1em;
+	.pm-dialog-list section{
+		margin-bottom: 10px;
 	}
-	.pm-dialog-list .media-heading .date{
-		color: #ccc;
+	.pm-dialog-list h4{
+		font-size: 12px;
+		margin: 0;
 	}
-.pm-dialog-list .media-content{
-	padding: 5px 10px;
-	border-radius: 2px;
-	display: inline-block;
-	background: rgba(0,0,0,.05);
-}
-	.pm-dialog-list .pm-dialog-me .media-content{
-		background: #2196F3;
-		color: #fff;
+	.pm-dialog-bg{
+		display: inline-block;
+		background: rgba(0,0,0,.05);
+		border-radius: 2px;
+		padding: 10px;
 	}
-		.pm-dialog-list .pm-dialog-me .media-content a{
-			color: #fff;
-			border-bottom: 1px dashed #fff;
+		.pm-dialog-me .pm-dialog-bg{
+			background: none;
+			border: 2px solid rgba(0,0,0,.05);
+		}
+		.pm-dialog-list .name{
+			font-weight: bold;
+		}
+		.pm-dialog-list .date{
+			color: #ccc;
+		}
+		.pm-dialog-list h4 span{
+			margin-right: .5em;
 		}
