--- a/includes/custom-pm/static/css/src/style.css
+++ b/includes/custom-pm/static/css/src/style.css
@@ -8,14 +8,15 @@
 	.pm-tab a{
 		position: relative;
 		color: #fff;
-		opacity: .8;
 		padding: 5px 10px;
 		float: left;
 	}
 	.pm-tab a:hover,
 	.pm-tab a.active{
-		opacity: 1;
 		background: rgba(255,255,255,.2);
+	}
+	.pm-tab a.new-msg{
+		background: rgb(210,154,29);
 	}
 	.pm-tab .close{
 		display: none;
@@ -28,10 +29,14 @@
 		line-height: 17px;
 		text-align: center;
 		border-radius: 50%;
-		background: rgba(0,0,0,.8);
+		background: rgb(211,57,31);
 		color: #fff;
 		font-weight: bold;
+		opacity: 1;
 	}
+		.pm-tab .close:hover{
+			color: #ccc;
+		}
 		.pm-tab a:hover .close{
 			display: block;
 		}
