--- a/includes/custom-account/static/css/src/style.css
+++ b/includes/custom-account/static/css/src/style.css
@@ -7,9 +7,9 @@
 }
 @media (min-width: 768px) {
 	#account-navbar .navbar{
-		box-shadow: 0 1px 3px rgba(0,0,0,.1);
-		border: 1px solid #DDD;
-		border-radius: 4px;
+		box-shadow: 0 1px 4px rgba(0,0,0,.3);
+		border: none;
+		border-radius: 2px;
 	}
 	#account-navbar .navbar-header{
 		float: none;
