--- a/includes/custom-sign/static/css/src/style.css
+++ b/includes/custom-sign/static/css/src/style.css
@@ -3,9 +3,10 @@
  */
 .mx-sign-panel{
 	overflow: inherit;
+	box-shadow: 0 5px 30px rgba(0,0,0,.3);
 }
 	.mx-sign-panel .panel-heading{
-		background: none;
+		background: #fff;
 		padding: 30px 30px 0;
 		text-align: center;
 		border: none;
@@ -34,4 +35,5 @@
 	}
 	.mx-sign-panel .panel-body{
 		padding: 30px 30px 15px;
+		box-shadow: none;
 	}
