--- a/includes/custom-slidebox/static/css/src/style.css
+++ b/includes/custom-slidebox/static/css/src/style.css
@@ -1,3 +1,9 @@
+.slidebox-container{
+	position: relative;
+	color: #fff;
+	margin-bottom: 20px;
+	box-shadow: 0 1px 3px rgba(0,0,0,.5);
+}
 #slidebox{
 	position: relative;
 	overflow: hidden;
@@ -38,9 +44,10 @@ html .slide-checkbox{
  * .control
  */
 #slidebox .control{
-	position: absolute;
+	/*position: absolute;
 	top: 0;
 	width: 100%;
+	height: 100%;*/
 	height: 0;
 	text-shadow: 0 1px 1px rgba(0,0,0,.3);
 }
@@ -51,8 +58,7 @@ html .slide-checkbox{
 		position: absolute;
 		left: 0;
 		top: 0;
-		display: block;
-		height: 320px;
+		height: 100%;
 		color:#fff;
 		margin: 0;
 		width: 50px;
@@ -60,6 +66,7 @@ html .slide-checkbox{
 		line-height: 320px;
 		text-align: center;
 		font-family: FontAwesome;
+		content: '';
 	}
 		#slidebox .control label:hover:before{
 			background: rgba(0,0,0,.1);
@@ -72,6 +79,8 @@ html .slide-checkbox{
 	content :"\f054";
 	left: auto;
 	right: 0;
+	z-index: 1;
+	
 }
 #slide-1:checked ~ .control label:nth-child(5):before,
 #slide-2:checked ~ .control label:nth-child(1):before,
@@ -81,6 +90,7 @@ html .slide-checkbox{
 	content :"\f053";
 	left: 0;
 	right: auto;
+	z-index: 1;
 }
 /**
  * .active
@@ -93,12 +103,12 @@ html .slide-checkbox{
 #slidebox .active label{
 	background: #fff;
 	float: left;
-	width: 15px;
-	height: 15px;
+	width: 7px;
+	height: 3px;
 	margin: 0;
-	border-radius: 50%;
+	border-radius: 2px;
 	margin-right: 5px;
-	opacity: .5;
+	opacity: .2;
 }
 #slidebox .active label:hover{
 	background: #f0ad4e;
@@ -115,7 +125,7 @@ html .slide-checkbox{
  */
 #slidebox h2{
 	position: absolute;
-	background: rgba(0,0,0,.5);
+	background: linear-gradient(transparent,#000);
 	color: #fff;
 	text-align: right;
 	bottom: 0;
@@ -123,7 +133,7 @@ html .slide-checkbox{
 	margin: 0;
 	padding: 15px 20px;
 	font-size: 20px;
-	text-shadow: 0 1px 1px rgba(0,0,0,.3);
+	text-shadow: 0 1px 10px rgba(0,0,0,.8),0 1px 5px #000, 0 0 5px #000;
 }
 	#slidebox h2 small{
 		display: block;
