--- a/includes/custom-point/static/css/src/style.css
+++ b/includes/custom-point/static/css/src/style.css
@@ -7,7 +7,7 @@
 	display: inline-block;
 	font-size: 45px;
 	color:#428BCA;
-	margin-bottom: 20px;
+	margin-bottom: 0;
 }
 .history-group .point-icon,
 .history-group .history-time{
