--- a/includes/custom-slidebox/static/css/src/style.css
+++ b/includes/custom-slidebox/static/css/src/style.css
@@ -1,8 +1,8 @@
 .slidebox-container{
 	position: relative;
 	color: #fff;
-	margin-bottom: 20px;
-	box-shadow: 0 1px 3px rgba(0,0,0,.5);
+	margin-bottom: 10px;
+	box-shadow: 0 1px 4px rgba(0,0,0,.3);
 }
 #slidebox{
 	position: relative;
@@ -125,7 +125,9 @@ html .slide-checkbox{
  */
 #slidebox h2{
 	position: absolute;
-	background: linear-gradient(transparent,#000);
+	background: -webkit-linear-gradient(transparent,rgba(0,0,0,.8));
+	background: -moz-linear-gradient(transparent,rgba(0,0,0,.8));
+	background: linear-gradient(transparent,rgba(0,0,0,.8));
 	color: #fff;
 	text-align: center;
 	bottom: 0;
