--- a/includes/custom-slidebox/static/css/src/style.css
+++ b/includes/custom-slidebox/static/css/src/style.css
@@ -1,206 +1,142 @@
+/**
+ * img height is 800*400
+ */
 .slidebox-container{
 	position: relative;
-	color: #fff;
-	margin-bottom: 10px;
-	box-shadow: 0 1px 4px rgba(0,0,0,.3);
+	margin-bottom: 20px;
 }
-#slidebox{
-	position: relative;
-	overflow: hidden;
-}
-html .slide-checkbox{
-	position: absolute;
-	opacity: 0;
-}
-#slide-1:checked ~ .slides .inner{margin-left: 0%;}
-#slide-2:checked ~ .slides .inner{margin-left: -100%;}
-#slide-3:checked ~ .slides .inner{margin-left: -200%;}
-#slide-4:checked ~ .slides .inner{margin-left: -300%;}
-#slide-5:checked ~ .slides .inner{margin-left: -400%;}
-
-.slides .overflow{
-	width: 100%;
-	overflow: hidden;
-	border-radius: 2px;
-}
-.slides img{
+#slidebox:after{
 	display: block;
-	width: 100%;
+	clear: both;
+	content: '';
 }
-.slides .post-thumbnail{
-	position: absolute;
-	left: 0;
-	top: 0;
-	height: 100%;
-}
-
-.slides a{
-	position: relative;
-	float: left;
-	width: 20%;
-}
-/**
- * .control
- */
-#slidebox .control{
-	/*position: absolute;
-	top: 0;
-	width: 100%;
-	height: 100%;*/
-	height: 0;
-	text-shadow: 0 1px 1px rgba(0,0,0,.3);
-}
-	#slidebox .control label{
-		margin: 0;
-	}
-	#slidebox .control label:before{
+	/**
+	 * ..area-blur
+	 */
+	.slidebox-container .area-blur{
 		position: absolute;
-		left: 0;
-		top: 0;
+		width: 100%;
 		height: 100%;
-		color:#fff;
-		margin: 0;
-		width: 50px;
-		font-size: 20px;
-		line-height: 200px;
-		text-align: center;
-		font-family: FontAwesome;
-		content: '';
+		filter: blur(15px);
 	}
-		#slidebox .control label:hover:before{
-			background: rgba(0,0,0,.1);
+		.slidebox-container .area-blur .item{
+			position: absolute;
+			-webkit-background-size: cover;
+			background-size: cover;
+			opacity: 0;
+			-webkit-transition: all .5s;
+			-ms-transition: all .5s;
+			-o-transition: all .5s;
+			transition: all .5s;
+			width: 100%;
+			height: 100%;
 		}
-#slide-1:checked ~ .control label:nth-child(2):before,
-#slide-2:checked ~ .control label:nth-child(3):before,
-#slide-3:checked ~ .control label:nth-child(4):before,
-#slide-4:checked ~ .control label:nth-child(5):before,
-#slide-5:checked ~ .control label:nth-child(1):before{
-	content :"\f054";
-	left: auto;
-	right: 0;
-	z-index: 1;
+
+		.slidebox-container .area-blur .active{
+			opacity: 1;
+			z-index: 1;
+		}
+	/**
+	 * .area-main
+	 */
+	#slidebox .area-main{
+		position: relative;
+	}
+		#slidebox .area-main .item{
+			display: none;
+			vertical-align: middle;
+			margin: 0 auto;
+			opacity: 0;
+			-webkit-transition: all .3s;
+			-moz-transition: all .3s;
+			-ms-transition: all .3s;
+			-o-transition: all .3s;
+			transition: all .3s;
+		}
+			#slidebox .area-main .item:after{
+				display: block;
+				clear: both;
+				content: '';
+			}
+			#slidebox .area-main a{
+				float: left;
+				width: 60%;
+			}
+		#slidebox .area-main .item.active{
+			display: block;
+			
+			opacity: 1;
+			z-index: 1;
+		}
+		#slidebox .area-main img{
+			display: block;
+			max-width: 100%;
+			width: auto;
+			height: 400px;
+			margin: 0 auto;
+			box-shadow: 0 2px 10px rgba(0,0,0,.5);
+			/*opacity: 0;*/
+		}
+		#slidebox .area-main .des{
+			width: 40%;
+			color: #fff;
+			font-size: 30px;
+			margin-top: 80px;
+			text-shadow: 0 1px 10px #000;
+			line-height: 1.2;
+		}
+			#slidebox .area-main .des span{
+				display: inline-block;
+				border: 1px solid #fff;
+				border-radius: 2px;
+				padding: 5px 10px;
+				margin-top: 20px;
+				text-transition: uppercase;
+			}
+			#slidebox .area-main:hover .des span{
+				background: rgba(255,255,255,.3);
+			}
+	/**
+	 * .area-thumbnail
+	 */
+	#slidebox .area-thumbnail{
+		display: table;
+	}
+		#slidebox .area-thumbnail a{
+			position: relative;
+			display: table-cell;
+			width: 1%;
+			padding: 0 10px;
+			-webkit-box-sizing: border-box;
+			-moz-box-sizing: border-box;
+			box-sizing: border-box;
+		}
+		#slidebox .area-thumbnail img{
+			display: block;
+			width: 100%;
+			margin: 0 auto;
+			box-shadow: 0 2px 10px rgba(0,0,0,.5);
+		}
+		#slidebox .area-thumbnail h2{
+			position: absolute;
+			background: linear-gradient(transparent,rgba(0,0,0,.3));
+			bottom: 0;
+			left: 10px;
+			right: 10px;
+			font-size: 13px;
+			margin: 0;
+			color: #fff;
+			padding: 5px;
+			white-space: nowrap;overflow:hidden;text-overflow:ellipsis; 
+			text-shadow: 0 0 1px #000;
+			font-weight: bold;
+		}
+		#slidebox .area-thumbnail .active h2{
+			border-bottom: 2px solid #fff ;
+		}
+@media(min-width: 768px){
+	#slidebox .area-main{
+		/*padding-top: 50px;*/
+	}
 	
-}
-#slide-1:checked ~ .control label:nth-child(5):before,
-#slide-2:checked ~ .control label:nth-child(1):before,
-#slide-3:checked ~ .control label:nth-child(2):before,
-#slide-4:checked ~ .control label:nth-child(3):before,
-#slide-5:checked ~ .control label:nth-child(4):before{
-	content :"\f053";
-	left: 0;
-	right: auto;
-	z-index: 1;
-}
-/**
- * .active
- */
-#slidebox .active{
-	display: none;
-	position: absolute;
-	bottom: 20px;
-	left: 20px;
-}
-#slidebox .active label{
-	background: #fff;
-	float: left;
-	width: 7px;
-	height: 3px;
-	margin: 0;
-	border-radius: 2px;
-	margin-right: 5px;
-	opacity: .2;
-}
-#slidebox .active label:hover{
-	background: #f0ad4e;
-	opacity: 1;
-}
-#slide-1:checked ~ .active label:nth-child(1){opacity: 1;}
-#slide-2:checked ~ .active label:nth-child(2){opacity: 1;}
-#slide-3:checked ~ .active label:nth-child(3){opacity: 1;}
-#slide-4:checked ~ .active label:nth-child(4){opacity: 1;}
-#slide-5:checked ~ .active label:nth-child(5){opacity: 1;}
-
-/**
- * h2
- */
-#slidebox h2{
-	position: absolute;
-	background: -webkit-linear-gradient(transparent,rgba(0,0,0,.8));
-	background: -moz-linear-gradient(transparent,rgba(0,0,0,.8));
-	background: linear-gradient(transparent,rgba(0,0,0,.8));
-	color: #fff;
-	text-align: center;
-	bottom: 0;
-	width: 100%;
-	margin: 0;
-	padding: 15px 20px;
-	font-size: 20px;
-	text-shadow: 0 1px 10px rgba(0,0,0,.8),0 1px 5px #000, 0 0 5px #000;
-}
-	#slidebox h2 small{
-		display: block;
-		margin-top: 5px;
-		color: #fff;
-	}
-/**
- * animate
- */
-.slides .inner {
-	width: 500%;
-	-webkit-transform: translateZ(0);
-	-webkit-transition: all 800ms cubic-bezier(.770, .000, .175, 1.000); 
-	-moz-transition: all 800ms cubic-bezier(.770, .000, .175, 1.000); 
-	-ms-transition: all 800ms cubic-bezier(.770, .000, .175, 1.000); 
-	-o-transition: all 800ms cubic-bezier(.770, .000, .175, 1.000); 
-	transition: all 800ms cubic-bezier(.770, .000, .175, 1.000); /* easeInOutQuart */
-
-	-webkit-transition-timing-function: cubic-bezier(.770, .000, .175, 1.000); 
-	-moz-transition-timing-function: cubic-bezier(.770, .000, .175, 1.000); 
-	-ms-transition-timing-function: cubic-bezier(.770, .000, .175, 1.000); 
-	-o-transition-timing-function: cubic-bezier(.770, .000, .175, 1.000); 
-	transition-timing-function: cubic-bezier(.770, .000, .175, 1.000); /* easeInOutQuart */
-}
-
-@media (min-width: 768px){
-	.slides a,
-	.slides .inner{
-		/*height: 360px;*/
-	}
-	#slidebox .control label:before{
-		line-height: 429px;
-	}
-	#slidebox .active{
-		display: block;
-	}
-	#slidebox h2{
-		text-align: right;
-	}
-}
-@media (min-width: 992px) {
-	.slides a,
-	.slides .inner{
-		height: 300px;
-	}
-	#slidebox .control label:before{
-		line-height: 300px;
-	}
-}
-@media (min-width: 1200px) {
-	.slides a,
-	.slides .inner{
-		height: 342px;
-	}
-	#slidebox .control label:before{
-		line-height: 342px;
-	}
-}
-@media (min-width: 1300px){
-	.slides a,
-	.slides .inner{
-		height: 362px;
-		max-height: 362px;
-	}
-	#slidebox .control label:before{
-		line-height: 362px;
-	}
 }
