--- a/includes/custom-slidebox/static/css/src/style.css
+++ b/includes/custom-slidebox/static/css/src/style.css
@@ -17,7 +17,10 @@
 		position: absolute;
 		width: 100%;
 		height: 100%;
+		-webkit-filter: blur(15px);
+		-ms-filter: blur(15px);
 		filter: blur(15px);
+		z-index: 0;
 	}
 		.slidebox-container .area-blur .item{
 			position: absolute;
@@ -42,6 +45,7 @@
 	#slidebox .area-main{
 		position: relative;
 		margin-bottom: 20px;
+		z-index: 1;
 	}
 		#slidebox .area-main .item{
 			display: none;
